--- a/SB_LevelEdit/SB_LevelEdit.vcproj
+++ b/SB_LevelEdit/SB_LevelEdit.vcproj
@@ -64,6 +64,7 @@
 				AdditionalDependencies="comctl32.lib rpcrt4.lib wsock32.lib winmm.lib zdll.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.9\lib\vc_lib&quot;"
+				AdditionalManifestDependencies=""
 				IgnoreDefaultLibraryNames="libcd.lib;libcid.lib;msvcrt.lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -119,7 +120,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="&quot;C:\wxWidgets-2.8.9\include&quot;;&quot;C:\wxWidgets-2.8.9\include\msvc&quot;"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;__WINDOWS__;__WXMSW__"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -137,7 +139,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="comctl32.lib rpcrt4.lib wsock32.lib winmm.lib zdll.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.9\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
